--- a/app/templates/stocks/stock_detail.html
+++ b/app/templates/stocks/stock_detail.html
@@ -45,6 +45,7 @@
                 <div class="col-12" style="height: 400px;">
                     <div id="stock-chart" class="h-100 position-relative">
                         <div class="text-center position-absolute top-50 start-50 translate-middle">
+                            <div id="no-data" style="display: none;">There is no data available.</div>
                             <div id="chart-spinner" class="spinner-border text-secondary" role="status">
                               <span class="visually-hidden">Загрузка...</span>
                             </div>
@@ -61,8 +62,8 @@
         <div class="col-md-4">
             <div class="card mb-lg-0 mb-4">
                 <div class="card-body">
-                    <p class="text-center mb-2"><small>The stock price on {{ price_update_date }}</small></p>
-                    <h3 class="text-center mb-3">{{ last_stock_price }} {{ stock.currencyid|convert_currency_code }}</h3>
+                    <p class="text-center mb-2"><small>The stock price on {{ price_update_date|default_if_none:"-" }}</small></p>
+                    <h3 class="text-center mb-3">{{ last_stock_price|default_if_none:"-" }} {{ stock.currencyid|convert_currency_code }}</h3>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-primary">Add to Favorites</button>
                     </div>
