--- a/app/templates/stocks/components/sorting_link.html
+++ b/app/templates/stocks/components/sorting_link.html
@@ -10,6 +10,6 @@
     {% elif current_order == 'desc' and current_sorting == sort_by %}
         <img src="{% static "icons/sort-up.svg" %}" alt="⇑">
     {% else %}
-        <img src="{% static "icons/arrow-down-up.svg" %}" style="width: 13px; height: 13px;" alt="">
+        <img src="{% static "icons/arrow-down-up.svg" %}" style="width: 13px; height: 13px;" alt="⇓⇑">
     {% endif %}
 </div>
