--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,15 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">    
       <a class="navbar-brand" href="{% url 'stocks' %}">StockSavvy</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Navigation switch">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="{% url 'stocks' %}">Stocks</a>
-          <a class="nav-link" href="#">Favourites</a>
+            <a class="nav-link {% if current_page == 'stocks' %}active{% endif %}" aria-current="page" href="{% url 'stocks' %}">Stocks</a>
+            {% if user.is_authenticated %}
+                    <a class="nav-link {% if current_page == 'favourite-stocks' %}active{% endif %}" href="{% url 'favourite-stocks' %}">Favourites</a>
+            {% endif %}
             <div class="dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle {% if current_page == 'settings' %}active{% endif %}" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Account
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
