--- a/app/templates/stocks/stock_detail.html
+++ b/app/templates/stocks/stock_detail.html
@@ -12,6 +12,10 @@
     display: none;
 }
 
+.stock-item-star {
+    cursor: pointer;
+}
+    
 </style>
 {% endblock head %}
 
@@ -20,7 +24,18 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col-md-8">
-            <h3>{{ stock.shortname }} <sup><small class="text-muted">{{ stock.ticker }}</small></sup></h3>
+            <div class="d-flex justify-content-between align-items-center">
+                <h3>{{ stock.shortname }} <sup><small class="text-muted">{{ stock.ticker }}</small></sup></h3>
+                <div>
+                    {% static "icons/star-fill.svg" as star_fill_src %}
+                    {% static "icons/star.svg" as star_src %}
+                    {% if stock.ticker in favourite_stocks %}
+                        {% include "stocks/components/star.html" with current_src=star_fill_src star_fill_src=star_fill_src classes="stock-item-star me-4" styles="width: 30px; height: 30px;" title="In Favorites" user_id=request.user.id stock_ticker=stock.ticker hide_on_delete=hide_on_delete %}
+                    {% else %}
+                        {% include "stocks/components/star.html" with current_src=star_src star_fill_src=star_fill_src classes="stock-item-star me-4" styles="width: 30px; height: 30px;" title="Add to Favorites" user_id=request.user.id stock_ticker=stock.ticker hide_on_delete=hide_on_delete %}
+                    {% endif %}
+                </div>
+            </div>
             
             <hr>
 
