--- a/app/templates/accounts/settings.html
+++ b/app/templates/accounts/settings.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="d-flex justify-content-center align-items-center vh-100">
-    <div class="col-3">
+    <div class="col-lg-3 col-sm-6 col-10">
         <div class="card">
             <div class="card-header">
                 <h6 class="card-text text-center">Settings</h6>
