--- a/app/templates/stocks/stock_detail.html
+++ b/app/templates/stocks/stock_detail.html
@@ -26,15 +26,17 @@
         <div class="col-md-8">
             <div class="d-flex justify-content-between align-items-center">
                 <h3>{{ stock.shortname }} <sup><small class="text-muted">{{ stock.ticker }}</small></sup></h3>
-                <div>
-                    {% static "icons/star-fill.svg" as star_fill_src %}
-                    {% static "icons/star.svg" as star_src %}
-                    {% if stock.ticker in favourite_stocks %}
-                        {% include "stocks/components/star.html" with current_src=star_fill_src star_fill_src=star_fill_src classes="stock-item-star me-4" styles="width: 30px; height: 30px;" title="In Favorites" user_id=request.user.id stock_ticker=stock.ticker hide_on_delete=hide_on_delete %}
-                    {% else %}
-                        {% include "stocks/components/star.html" with current_src=star_src star_fill_src=star_fill_src classes="stock-item-star me-4" styles="width: 30px; height: 30px;" title="Add to Favorites" user_id=request.user.id stock_ticker=stock.ticker hide_on_delete=hide_on_delete %}
-                    {% endif %}
-                </div>
+                {% if request.user.is_authenticated %}
+                    <div>
+                        {% static "icons/star-fill.svg" as star_fill_src %}
+                        {% static "icons/star.svg" as star_src %}
+                        {% if stock.ticker in favourite_stocks %}
+                            {% include "stocks/components/star.html" with current_src=star_fill_src star_fill_src=star_fill_src classes="stock-item-star me-4" styles="width: 30px; height: 30px;" title="In Favorites" user_id=request.user.id stock_ticker=stock.ticker %}
+                        {% else %}
+                            {% include "stocks/components/star.html" with current_src=star_src star_fill_src=star_fill_src classes="stock-item-star me-4" styles="width: 30px; height: 30px;" title="Add to Favorites" user_id=request.user.id stock_ticker=stock.ticker %}
+                        {% endif %}
+                    </div>
+                {% endif %}
             </div>
             
             <hr>
@@ -78,10 +80,7 @@
             <div class="card mb-lg-0 mb-4">
                 <div class="card-body">
                     <p class="text-center mb-2"><small>The stock price on {{ price_update_date|default_if_none:"-" }}</small></p>
-                    <h3 class="text-center mb-3">{{ last_stock_price|default_if_none:"-" }} {{ stock.currencyid|convert_currency_code }}</h3>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-outline-primary">Add to Favorites</button>
-                    </div>
+                    <h3 class="text-center mb-0">{{ last_stock_price|default_if_none:"-" }} {{ stock.currencyid|convert_currency_code }}</h3>
                 </div>
             </div>
         </div>
