--- a/app/templates/stocks/components/stock_item.html
+++ b/app/templates/stocks/components/stock_item.html
@@ -20,7 +20,7 @@
                 <div class="small">{{ stock.ticker }}</div>
             </div>
             <div class="col text-end">
-                <div>{% normalize stock.get_last_price places=stock.decimals %} {{ stock.currencyid|convert_currency_code }}</div>
+                <div>{% normalize stock.get_last_price|default_if_none:"-" places=stock.decimals %} {{ stock.currencyid|convert_currency_code }}</div>
                 <div class="d-none d-md-block text-secondary small">1 lot = {{ stock.lotsize }} stocks</div>
                 {% with value_per_year=stock.price_change.value_per_year percent_per_year=stock.price_change.percent_per_year %}
                     <div class="col text-end {% if value_per_year > 0 %}text-success{% elif value_per_year < 0 %}text-danger{% endif %} d-md-none">
