--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,5 +1,13 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid d-flex justify-content-center">
-        <p class="text-white small m-0 p-2">&copy; 2024 - StockSavvy by stepkacorporation</p>
+    <div class="container-fluid d-flex justify-content-center ps-1 pe-1">
+        <p class="text-white small m-0 p-2">
+            &copy; 2024 - 
+            <a href="https://github.com/stepkacorporation/stocksavvy" target="_blank" class="link-light link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover">
+                StockSavvy by stepkacorporation
+                <img src="{% static "icons/github.svg" %}" alt="GitHub" class="p-1">
+            </a>
+        </p>
     </div>
 </nav>
