--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>{% block title %}{% endblock title %}</title>
+        <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
         
         <!-- AnyChart -->
         <script src="{% static "common/js/anychart-core.min.js" %}"></script>
