--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+
+<html lang="en" data-theme="dim">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>{% block title %}StockSavvy{% endblock %}</title>
+
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
+    <!-- Подключение Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
-<body>
+
+<body class="min-h-screen flex flex-col items-center bg-base-200">
+
+    {% include 'header.html' %}
+
+    <main class="w-full">
+        {% block content %}{% endblock %}
+    </main>
+
+    {% include 'footer.html' %}
+
+    <script src="{% static 'js/themeToggle.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
 
 </body>
+
 </html>
