--- a/app/templates/landing/index.html
+++ b/app/templates/landing/index.html
@@ -1,191 +1,20 @@
-<!DOCTYPE html>
-{% load static %}
+{% extends 'base.html' %}
 
-<html lang="en" data-theme="dim">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StockSavvy</title>
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+{% block title %}Главная - StockSavvy{% endblock %}
 
-    <script>
-        function toggleTheme() {
-            const currentTheme = document.documentElement.getAttribute("data-theme");
-            const newTheme = currentTheme === "dim" ? "light" : "dim";
+{% block content %}
 
-            // Переключение темы
-            document.documentElement.setAttribute("data-theme", newTheme);
-            localStorage.setItem("theme", newTheme);
+{% include 'account/snippets/messages.html' %}
 
-            // Обновление текста темы
-            const themeText = document.getElementById("themeText");
-            themeText.textContent = newTheme === "dim" ? "День" : "Ночь";
-
-            // Смена иконок
-            const dayIcon = document.getElementById("dayIcon");
-            const nightIcon = document.getElementById("nightIcon");
-            if (newTheme === "dim") {
-                dayIcon.classList.add("hidden");
-                nightIcon.classList.remove("hidden");
-            } else {
-                nightIcon.classList.add("hidden");
-                dayIcon.classList.remove("hidden");
-            }
-        }
-
-        // Установка сохраненной темы при загрузке страницы
-        document.addEventListener("DOMContentLoaded", () => {
-            const savedTheme = localStorage.getItem("theme") || "dim";
-            document.documentElement.setAttribute("data-theme", savedTheme);
-
-            // Устанавливаем правильный текст при загрузке страницы
-            const themeText = document.getElementById("themeText");
-            themeText.textContent = savedTheme === "dim" ? "День" : "Ночь";
-
-            // Устанавливаем правильные иконки
-            const dayIcon = document.getElementById("dayIcon");
-            const nightIcon = document.getElementById("nightIcon");
-            if (savedTheme === "dim") {
-                dayIcon.classList.add("hidden");
-                nightIcon.classList.remove("hidden");
-            } else {
-                nightIcon.classList.add("hidden");
-                dayIcon.classList.remove("hidden");
-            }
-        });
-
-    </script>
-
-</head>
-<body class="min-h-screen flex flex-col items-center bg-base-100">
-
-<nav class="navbar bg-base-100">
-    <div class="navbar-start">
-        <div class="dropdown">
-            <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"/>
-                </svg>
-            </div>
-            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                <li>
-                    <a>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
-                        </svg>
-                        <span>Главная</span>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z" />
-                        </svg>
-                        <span>Акции</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="navbar-center">
-        <a class="btn btn-ghost text-xl">StockSavvy</a>
-    </div>
-    <div class="navbar-end">
-        <div class="dropdown dropdown-end">
-
-            <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-                <div class="w-8 rounded-full flex items-center justify-center bg-base-100">
-                    <!-- Использование SVG-иконки профиля -->
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                    </svg>
-                </div>
-            </div>
-
-            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                <li>
-                    <a>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-4 w-4">
-                          <path fill-rule="evenodd" d="M18.685 19.097A9.723 9.723 0 0 0 21.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 0 0 3.065 7.097A9.716 9.716 0 0 0 12 21.75a9.716 9.716 0 0 0 6.685-2.653Zm-12.54-1.285A7.486 7.486 0 0 1 12 15a7.486 7.486 0 0 1 5.855 2.812A8.224 8.224 0 0 1 12 20.25a8.224 8.224 0 0 1-5.855-2.438ZM15.75 9a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" clip-rule="evenodd" />
-                        </svg>
-                        <span>Профиль</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0);" onclick="toggleTheme()">
-                        <svg id="dayIcon" class="h-4 w-4 fill-current hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"/>
-                        </svg>
-                        <svg id="nightIcon" class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/>
-                        </svg>
-                        <span id="themeText">Ночь</span>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M10.343 3.94c.09-.542.56-.94 1.11-.94h1.093c.55 0 1.02.398 1.11.94l.149.894c.07.424.384.764.78.93.398.164.855.142 1.205-.108l.737-.527a1.125 1.125 0 0 1 1.45.12l.773.774c.39.389.44 1.002.12 1.45l-.527.737c-.25.35-.272.806-.107 1.204.165.397.505.71.93.78l.893.15c.543.09.94.559.94 1.109v1.094c0 .55-.397 1.02-.94 1.11l-.894.149c-.424.07-.764.383-.929.78-.165.398-.143.854.107 1.204l.527.738c.32.447.269 1.06-.12 1.45l-.774.773a1.125 1.125 0 0 1-1.449.12l-.738-.527c-.35-.25-.806-.272-1.203-.107-.398.165-.71.505-.781.929l-.149.894c-.09.542-.56.94-1.11.94h-1.094c-.55 0-1.019-.398-1.11-.94l-.148-.894c-.071-.424-.384-.764-.781-.93-.398-.164-.854-.142-1.204.108l-.738.527c-.447.32-1.06.269-1.45-.12l-.773-.774a1.125 1.125 0 0 1-.12-1.45l.527-.737c.25-.35.272-.806.108-1.204-.165-.397-.506-.71-.93-.78l-.894-.15c-.542-.09-.94-.56-.94-1.109v-1.094c0-.55.398-1.02.94-1.11l.894-.149c.424-.07.765-.383.93-.78.165-.398.143-.854-.108-1.204l-.526-.738a1.125 1.125 0 0 1 .12-1.45l.773-.773a1.125 1.125 0 0 1 1.45-.12l.737.527c.35.25.807.272 1.204.107.397-.165.71-.505.78-.929l.15-.894Z" />
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                        </svg>
-
-                        <span>Настройки</span>
-                    </a>
-                </li>
-                <li></li>
-                <li>
-                    <a>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
-                        </svg>
-                        <span>Выйти</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-
-<!-- Секция героев лендинга -->
-<header class="hero min-h-screen bg-base-200">
+<section class="hero min-h-screen bg-base-200">
     <div class="hero-content text-center">
         <div class="max-w-md">
             <h1 class="text-5xl font-bold">Добро пожаловать в StockSavvy!</h1>
             <p class="py-6">Ваш личный помощник для анализа акций и финансовых рынков. Легко следите за ценами,
                 тенденциями и многое другое</p>
-            <a href="#features" class="btn btn-primary">Узнать больше</a>
-        </div>
-    </div>
-</header>
-
-<!-- Основные функции -->
-<section id="features" class="py-10 bg-base-100 text-base-content">
-    <div class="container mx-auto px-4">
-        <h2 class="text-4xl font-bold text-center">Наши функции</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
-            <div class="card shadow-lg bg-base-200 p-4">
-                <h3 class="text-2xl font-semibold">Анализ акций</h3>
-                <p>Получите доступ к актуальной информации о стоимости акций и прогнозах.</p>
-            </div>
-            <div class="card shadow-lg bg-base-200 p-4">
-                <h3 class="text-2xl font-semibold">Прогнозирование</h3>
-                <p>Используйте наш сервис для анализа и предсказания цен на рынке.</p>
-            </div>
-            <div class="card shadow-lg bg-base-200 p-4">
-                <h3 class="text-2xl font-semibold">Обновления в реальном времени</h3>
-                <p>Оставайтесь в курсе всех изменений на финансовых рынках.</p>
-            </div>
+            <a class="btn btn-primary">Узнать больше</a>
         </div>
     </div>
 </section>
+{% endblock %}
 
-<!-- Футер -->
-<footer class="footer p-4 bg-base-200 text-base-content">
-    <div class="container mx-auto text-center">
-        <p>&copy; 2024 StockSavvy. Все права защищены.</p>
-    </div>
-</footer>
-</body>
-</html>
