--- a/app/templates/account/signup.html
+++ b/app/templates/account/signup.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="text-center">
-                <button type="submit" class="btn btn-primary w-1/2 mb-3">Зарегистрироваться</button>
+                <button type="submit" class="btn btn-primary w-1/2 mb-3">Создать аккаунт</button>
             </div>
         </form>
 
