feat: update password reset pages

--- a/app/templates/account/email/password_reset_key_message.html
+++ b/app/templates/account/email/password_reset_key_message.html
@@ -65,7 +65,7 @@
         <hr>
 
         <div class="footer">
-            <p>С уважением, команда MakeResume</p>
+            <p>С уважением, команда StockSavvy</p>
         </div>
     </div>
 </body>
