--- a/app/templates/account/password_reset.html
+++ b/app/templates/account/password_reset.html
@@ -1,24 +1,33 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load account %}
-{% load crispy_forms_tags %}
 
-{% block title %}Восстановление пароля | MakeResume{% endblock %}
+{% block title %}Восстановление пароля | StockSavvy{% endblock %}
 
-{% block accounts_content %}
+{% block content %}
 
-<h1 class="fs-5 mb-3 fw-bold">Забыли пароль?</h1>
+<div class="flex items-center justify-center min-h-[90vh]">
+    <div class="max-w-md mx-auto w-full px-4 py-5">
 
-{% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-{% endif %}
+        <h1 class="text-2xl font-bold mb-3 text-center">Забыли пароль?</h1>
 
-<p>Для восстановления пароля введите свой адрес электронной почты</p>
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% else %}
+            <p class="text-center text-gray-500 mb-5">Для восстановления пароля введите свой адрес электронной почты</p>
 
-<form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-    {% csrf_token %}
-    {{ form.email|as_crispy_field }}
-    <button type="submit" class="btn btn-primary w-100">Сбросить пароль</button>
-</form>
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+
+                {% include 'account/snippets/form_input.html' with input_type="email" input_name="email" label_text="Email" %}
+
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary w-1/2">Сбросить пароль</button>
+                </div>
+            </form>
+        {% endif %}
+
+    </div>
+</div>
 
 {% endblock %}
