--- a/app/templates/account/password_reset_done.html
+++ b/app/templates/account/password_reset_done.html
@@ -1,20 +1,27 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load account %}
 
-{% block title %}Восстановление пароля | MakeResume{% endblock %}
+{% block title %}Сброс пароля | StockSavvy{% endblock %}
 
-{% block accounts_content %}
-<h1 class="fs-5 mb-3 fw-bold text-center">Мы отправили вам письмо для сброса пароля</h1>
+{% block content %}
+<div class="flex items-center justify-center min-h-[90vh]">
+    <div class="max-w-md mx-auto w-full px-4 py-5">
 
-{% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-{% endif %}
+        <h1 class="text-2xl font-bold mb-3 text-center">Мы отправили вам письмо для сброса пароля</h1>
 
-<p class="text-center">Пожалуйста, проверьте свою электронную почту и следуйте инструкциям, чтобы восстановить
-    пароль</p>
-<hr>
-<div class="text-center small">
-    Знаете пароль? <a href="{% url 'account_login' %}">Выполните вход</a>
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+
+        <p class="text-center text-gray-500 mb-5">Пожалуйста, проверьте свою электронную почту и следуйте инструкциям, чтобы восстановить пароль.</p>
+
+        <div class="divider"></div>
+
+        <div class="text-center text-sm text-gray-500">
+            Знаете пароль? <a href="{% url 'account_login' %}" class="link link-primary">Выполните вход</a>
+        </div>
+
+    </div>
 </div>
 {% endblock %}
