--- a/app/templates/account/password_reset_from_key_done.html
+++ b/app/templates/account/password_reset_from_key_done.html
@@ -1,11 +1,15 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
-{% block title %}Сброс пароля | MakeResume{% endblock %}
+{% block title %}Сброс пароля | StockSavvy{% endblock %}
 
-{% block accounts_content %}
-    <h1 class="fs-5 mb-3 fw-bold text-center mb-4">Пароль успешно изменен</h1>
-    <hr class="mb-4">
-    <div class="text-center">
-        <a href="{% url 'account_login' %}" class="btn btn-primary">Войти в личный кабинет</a>
+{% block content %}
+<div class="flex items-center justify-center min-h-[90vh]">
+    <div class="max-w-md mx-auto w-full px-4 py-5">
+        <h1 class="fs-5 mb-3 fw-bold text-center mb-4">Пароль успешно изменен</h1>
+        <div class="divider"></div>
+        <div class="text-center">
+            <a href="{% url 'account_login' %}" class="btn btn-primary w-1/2">Войти в аккаунт</a>
+        </div>
     </div>
+</div>
 {% endblock %}
